documentdb-playground/k3s-azure-fleet/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.37.4.10188",
      "templateHash": "2755652574334991722"
    }
  },
  "parameters": {
    "hubLocation": {
      "type": "string",
      "defaultValue": "westus3",
      "metadata": {
        "description": "Location for AKS hub cluster"
      }
    },
    "k3sRegions": {
      "type": "array",
      "defaultValue": [
        "eastus2",
        "uksouth"
      ],
      "metadata": {
        "description": "Regions for k3s VMs"
      }
    },
    "resourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Resource group name"
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_D2s_v3",
      "metadata": {
        "description": "VM size for k3s nodes"
      }
    },
    "aksVmSize": {
      "type": "string",
      "defaultValue": "Standard_DS2_v2",
      "metadata": {
        "description": "AKS node VM size"
      }
    },
    "sshPublicKey": {
      "type": "string",
      "metadata": {
        "description": "SSH public key for VM access (required by Azure but not used - we use Run Command)"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Admin username for VMs"
      }
    },
    "k3sVersion": {
      "type": "string",
      "defaultValue": "v1.30.4+k3s1",
      "metadata": {
        "description": "k3s version"
      }
    }
  },
  "variables": {
    "aksClusterName": "[format('hub-{0}', parameters('hubLocation'))]",
    "aksVnetName": "[format('aks-{0}-vnet', parameters('hubLocation'))]",
    "aksSubnetName": "aks-subnet"
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-05-01",
      "name": "[variables('aksVnetName')]",
      "location": "[parameters('hubLocation')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.1.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "[variables('aksSubnetName')]",
            "properties": {
              "addressPrefix": "10.1.0.0/20"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.ContainerService/managedClusters",
      "apiVersion": "2024-01-01",
      "name": "[variables('aksClusterName')]",
      "location": "[parameters('hubLocation')]",
      "identity": {
        "type": "SystemAssigned"
      },
      "properties": {
        "dnsPrefix": "[variables('aksClusterName')]",
        "kubernetesVersion": "1.32",
        "enableRBAC": true,
        "networkProfile": {
          "networkPlugin": "azure",
          "networkPolicy": "azure",
          "serviceCidr": "10.100.0.0/16",
          "dnsServiceIP": "10.100.0.10"
        },
        "agentPoolProfiles": [
          {
            "name": "nodepool1",
            "count": 2,
            "vmSize": "[parameters('aksVmSize')]",
            "mode": "System",
            "osType": "Linux",
            "vnetSubnetID": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('aksVnetName'), variables('aksSubnetName'))]",
            "enableAutoScaling": false
          }
        ],
        "aadProfile": {
          "managed": true,
          "enableAzureRBAC": true
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('aksVnetName'))]"
      ]
    },
    {
      "copy": {
        "name": "k3sVnets",
        "count": "[length(parameters('k3sRegions'))]"
      },
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-05-01",
      "name": "[format('k3s-{0}-vnet', parameters('k3sRegions')[copyIndex()])]",
      "location": "[parameters('k3sRegions')[copyIndex()]]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[format('10.{0}.0.0/16', add(copyIndex(), 2))]"
          ]
        },
        "subnets": [
          {
            "name": "k3s-subnet",
            "properties": {
              "addressPrefix": "[format('10.{0}.0.0/24', add(copyIndex(), 2))]"
            }
          }
        ]
      }
    },
    {
      "copy": {
        "name": "k3sNsgs",
        "count": "[length(parameters('k3sRegions'))]"
      },
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[format('k3s-{0}-nsg', parameters('k3sRegions')[copyIndex()])]",
      "location": "[parameters('k3sRegions')[copyIndex()]]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowKubeAPI",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "6443"
            }
          },
          {
            "name": "AllowIstioEastWest",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "15443"
            }
          },
          {
            "name": "AllowIstioStatus",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "15021"
            }
          },
          {
            "name": "AllowHTTP",
            "properties": {
              "priority": 130,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "AllowHTTPS",
            "properties": {
              "priority": 140,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          }
        ]
      }
    },
    {
      "copy": {
        "name": "k3sPublicIps",
        "count": "[length(parameters('k3sRegions'))]"
      },
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-05-01",
      "name": "[format('k3s-{0}-ip', parameters('k3sRegions')[copyIndex()])]",
      "location": "[parameters('k3sRegions')[copyIndex()]]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[format('k3s-{0}-{1}', parameters('k3sRegions')[copyIndex()], uniqueString(resourceGroup().id))]"
        }
      }
    },
    {
      "copy": {
        "name": "k3sNics",
        "count": "[length(parameters('k3sRegions'))]"
      },
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-05-01",
      "name": "[format('k3s-{0}-nic', parameters('k3sRegions')[copyIndex()])]",
      "location": "[parameters('k3sRegions')[copyIndex()]]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('k3s-{0}-vnet', parameters('k3sRegions')[copyIndex()])), '2023-05-01').subnets[0].id]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('k3s-{0}-ip', parameters('k3sRegions')[copyIndex()]))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('k3s-{0}-nsg', parameters('k3sRegions')[copyIndex()]))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', format('k3s-{0}-nsg', parameters('k3sRegions')[copyIndex()]))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', format('k3s-{0}-ip', parameters('k3sRegions')[copyIndex()]))]",
        "[resourceId('Microsoft.Network/virtualNetworks', format('k3s-{0}-vnet', parameters('k3sRegions')[copyIndex()]))]"
      ]
    },
    {
      "copy": {
        "name": "k3sVms",
        "count": "[length(parameters('k3sRegions'))]"
      },
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-07-01",
      "name": "[format('k3s-{0}', parameters('k3sRegions')[copyIndex()])]",
      "location": "[parameters('k3sRegions')[copyIndex()]]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[format('k3s-{0}', parameters('k3sRegions')[copyIndex()])]",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('sshPublicKey')]"
                }
              ]
            }
          },
          "customData": "[base64(format('#cloud-config\npackage_update: true\npackage_upgrade: true\n\npackages:\n  - curl\n  - jq\n\nruncmd:\n  # Install k3s with TLS SANs for remote access (public IP)\n  - curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION=\"{0}\" PUBLIC_IP=$(curl -s ifconfig.me) sh -s - server --tls-san $(hostname) --tls-san $PUBLIC_IP --node-external-ip $PUBLIC_IP\n  \n  # Wait for k3s to be ready\n  - sleep 30\n  - until /usr/local/bin/k3s kubectl get nodes; do sleep 5; don [...]
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "0001-com-ubuntu-server-jammy",
            "sku": "22_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            },
            "diskSizeGB": 64
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', format('k3s-{0}-nic', parameters('k3sRegions')[copyIndex()]))]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', format('k3s-{0}-nic', parameters('k3sRegions')[copyIndex()]))]"
      ]
    }
  ],
  "outputs": {
    "aksClusterName": {
      "type": "string",
      "value": "[variables('aksClusterName')]"
    },
    "aksClusterResourceGroup": {
      "type": "string",
      "value": "[parameters('resourceGroupName')]"
    },
    "k3sVmNames": {
      "type": "array",
      "copy": {
        "count": "[length(parameters('k3sRegions'))]",
        "input": "[format('k3s-{0}', parameters('k3sRegions')[copyIndex()])]"
      }
    },
    "k3sVmPublicIps": {
      "type": "array",
      "copy": {
        "count": "[length(parameters('k3sRegions'))]",
        "input": "[reference(resourceId('Microsoft.Network/publicIPAddresses', format('k3s-{0}-ip', parameters('k3sRegions')[copyIndex()])), '2023-05-01').ipAddress]"
      }
    },
    "k3sRegions": {
      "type": "array",
      "value": "[parameters('k3sRegions')]"
    },
    "hubRegion": {
      "type": "string",
      "value": "[parameters('hubLocation')]"
    }
  }
}
